@@ -1,3 +1,8 @@
+2018-01-04  Sam Steingold  <sds@gnu.org>
+
+	* modules/gdbm/gdbm.c (error_gdbm): Fix declaration for gdbm 1.14.
+	(open_gdbm): No need to cast error_gdbm.
+
 2018-01-01  Bruno Haible  <bruno@clisp.org>
 
 	Bump copyright year.
